--- a/readable-client/package.json
+++ b/readable-client/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "babel-preset-stage-2": "^6.24.1",
     "material-ui": "^0.20.0",
     "material-ui-icons": "^1.0.0-beta.17",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-loading": "^1.0.3",
     "react-redux": "^5.0.6",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2"
@@ -15,6 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "jest": "jest",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
@@ -25,6 +29,10 @@
     "@storybook/addons": "^3.3.13",
     "@storybook/react": "^3.3.13",
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "jest-cli": "^22.4.2",
+    "regenerator-runtime": "^0.11.1",
     "storybook-addon-material-ui": "^0.8.2"
   }
 }
