--- a/readable-client/package.json
+++ b/readable-client/package.json
@@ -12,7 +12,8 @@
     "react-loading": "^1.0.3",
     "react-redux": "^5.0.6",
     "react-scripts": "1.1.0",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
