--- a/readable-client/package.json
+++ b/readable-client/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.2.0",
     "react-loading": "^1.0.3",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
     "uuid": "^3.2.1"
