--- a/readable-client/package.json
+++ b/readable-client/package.json
@@ -33,6 +33,8 @@
     "babel-jest": "^22.4.1",
     "babel-preset-es2015": "^6.24.1",
     "jest-cli": "^22.4.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "regenerator-runtime": "^0.11.1",
     "storybook-addon-material-ui": "^0.8.2"
   }
