--- a/readable-client/package.json
+++ b/readable-client/package.json
@@ -7,6 +7,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "material-ui": "^0.20.0",
     "material-ui-icons": "^1.0.0-beta.17",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
