fix vote loading bug

--- a/readable-client/package.json
+++ b/readable-client/package.json
@@ -22,7 +22,8 @@
     "jest": "jest",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "server": "node ../api-server/server"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.3.13",
