finish normalizing data

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "cd readable-client && concurrently \"npm start\" \"npm run server\"",
-    "heroku-postbuild": "cd readable-client/ && npm install && npm run build"  },
+    "heroku-postbuild": "cd readable-client/ && npm install && npm run build"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/udacity/reactnd-project-readable-starter.git"
@@ -22,6 +23,7 @@
     "eslint-plugin-react": "^7.7.0"
   },
   "dependencies": {
-    "concurrently": "^3.5.1"
+    "concurrently": "^3.5.1",
+    "reselect": "^3.0.1"
   }
 }
