--- a/readable-client/package.json
+++ b/readable-client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-preset-stage-2": "^6.24.1",
+    "connected-react-router": "^4.4.1",
     "fetch-mock": "^6.5.0",
     "history": "^4.7.2",
     "material-ui": "^0.20.0",
